--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "types": "dist/index.d.ts",
   "author": "LookAtFr3sn0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LookAtFr3sn0/X3DH.git"
+  },
   "files": [
     "/dist"
   ],
@@ -14,5 +18,16 @@
     "libsodium-wrappers": "^0.7.15",
     "typescript": "^5.8.3",
     "undici-types": "^7.9.0"
-  }
+  },
+  "keywords": [
+    "x3dh",
+    "triple-diffie-hellman",
+    "encryption",
+    "cryptography",
+    "libsodium",
+    "key-exchange",
+    "e2ee",
+    "end-to-end-encryption",
+    "signal-protocol"
+  ]
 }
