--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "sodium-native": "^5.0.3",
+    "sodium-plus": "^0.9.0",
     "typescript": "^5.8.3",
     "undici-types": "^7.9.0"
   },
