--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/LookAtFr3sn0/X3DH.git"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "files": [
     "/dist"
   ],
@@ -30,5 +33,10 @@
     "e2ee",
     "end-to-end-encryption",
     "signal-protocol"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4"
+  }
 }
